fix a bug that will cause search-layer behind the slider,add z-index:2 in common.css to fix this bug

--- a/css/common.css
+++ b/css/common.css
@@ -198,6 +198,7 @@ a.link:hover {
 
 .search-layer {
     position: absolute;
+    z-index: 2;
     top: 100%;
     left: -1px;
     width: 100%;
